--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Test bluetooth</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.js"></script>
+    <script src="util.js"></script>
     <script src="web-bluetooth.js"></script>
+    <style>
+      button {
+        width: 100%;
+        height: 47vh;
+        font-size: 100px;
+      }
+    </style>
   </head>
   <body>
-    <button onClick="onButtonClick()">Test</button>
+    <button onClick="onButtonClick()">Connect</button>
+    <button onClick="disconnect()">Disconnect</button>
   </body>
 </html>
